--- a/lorem.html
+++ b/lorem.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=p, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Profile Page</title>
 </head>
 <body>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, deserunt. Tenetur et maiores commodi quia cumque quo aperiam aut eius, esse enim necessitatibus reiciendis ipsum voluptatum magni beatae consequatur illum.</p>
+    <nav>
+        <div class="container">
+            <div id="left-nav">
+                <h1>Profile</h1>
+                <ul>
+                    <li>Home</li>
+                    <li>My Profile</li>
+                    <li>Find Connections</li>
+                </ul>
+            </div>
+            <button>Sign Out</button>
+        </div>
+    </nav>
+    <div class="container">
+        <main></main>
+        <aside></aside>
+    </div>
 </body>
 </html>
